# Task-manager

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
task_manager/: settings.py  tests.py  urls.py  utils.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/fixtures/: db_labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: tests_forms.py  tests_models.py  tests_views.py
task_manager/mixins/: mixins.py  mixins_for_tests.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/fixtures/: db_statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_remove_status_status_name_status_name.py
task_manager/statuses/tests/: tests_forms.py  tests_models.py  tests_views.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/fixtures/: db_tasks.json  tasks_data.json
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabel_task_labels.py  0003_alter_task_labels.py
task_manager/tasks/tests/: tests_forms.py  tests_models.py  tests_views.py
task_manager/templates/: base.html  footer.html  home.html  index.html  navigation.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels_index.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: status_create.html  (+3 more)
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
(+21 files in other folders)
